squashing weird bugs in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
 
 .logo {
   height: 6em;
-  padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -33,7 +32,6 @@
 }
 
 .card {
-  padding: 2em;
 }
 
 .read-the-docs {
